# CMake_tutorial_4_InstallLibs_b

./: CMakeLists.txt  Readme.md  main.cpp
